tests/reject/fail_borrow_move.tk
struct Point { x: i32 }

fn main() -> i32 {
    let p = ^Point { x = 10 };
    let &y = &p;
    let z = ^p; // Error: cannot move p while it is borrowed
    return 0;
}
